package main.java.com.team1.dto;

public record VehicleDTO() {
}
